# narrative-memory-agent

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  TODO.md  docker-compose.yml  start.bat  start.sh  方案文档.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/: ask.py  feedback.py  ingest.py  profile.py  session.py  sleep.py
backend/app/memory/: episodic.py  semantic.py  vectors.py  working.py
backend/app/models/: __init__.py  character.py  event.py
backend/app/services/: bias.py  bias_prompt.py  decay.py  generation.py  ingestion.py  session_resumption.py  sleep.py  validation.py
backend/scripts/: test_ingestion.py
backend/tests/: test_api.py  test_bias.py  test_bias_prompt.py  test_decay.py  test_generation.py  test_sleep.py  test_validation.py
docs/: 2026-06-21_memory-decay-dual-dialog.md  architecture.en.html  architecture.zh.html  demo-questions.md  demo-script-v2.md  demo.md  project-description.md  tech-stack.md  user-test-flow.md  架构图.html
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  (+1 more)
internal/: Claude_Mythos_MultiAgent.md  NMA起源叙事.md  OOC公式-论文引用.md  SleepCycle-实现方案对比.md  TODO.md  YannDubois_持续学习曲线下面积.md  demo-questions.md  demo-script-v3.md  demo_flow.md  for_fable5_review.md  市场验证.md  技术风险分析.md  方案文档.md  梵蒂冈AI通谕_MagnificaHumanitas.md  记忆架构审计-Zwaan索引与数据流闭环.md  跨会话记忆分析.md
scripts/: dump_chars.py  reseed_full.py  seed_seen_chars.py  translate_chinese_traits.py  translate_with_llm.py  update_lena_profile.py
(+21 files in other folders)
